<resources>
    <string name="app_name">SmartRouteTruckApp</string>
    <string name="navigation_drawer_modal">SmartRouteTruck</string>
    <string name="menu_cerrar_sesion">Cerrar Sesion</string>
    <string name="menu_download_map">Descargar Mapa</string>
    <string name="menu_control_points">Puntos de Control</string>
    <string name="menu_early_points">Puntos Cercanos</string>
    <string name="menu_prohibited_areas">Zonas Prohibidas</string>
    <string name="menu_route">Obtener Ruta</string>
    <string name="menu_vehiculo">Vehiculo</string>
    <string name="menu_black_and_white">Blanco/Negro</string>
    <string name="menu_location">Localizacion</string>

    <string name="dialog_chooser">Elegir</string>
    <string name="dialog_confirm">Confirmar</string>
    <string name="dialog_confirm_title">¿Confirmar acción?</string>
    <string name="dialog_info">Informativo</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_save">Save</string>
    <string name="dialog_cancel">Cancelar</string>

<!--    Aui comienzan las cadenas de la App Remasterizada-->
    <string name="hint_avoid_zone">Zonas Prohibidas</string>
    <string name="sheets_bottom_zona_prohibida">Zonas Prohibidas</string>
    <string name="sheets_bottom_zona_prohibida_type">Listado de poligonos</string>
    <string name="sheets_bottom_save">Save</string>
    <string name="hint_control_point">Puntos de Control</string>
    <string-array name="poi_types_array">
        <item>Restaurante</item>
        <item>Gasolinera</item>
        <item>Banco</item>
        <item>Hotel</item>
        <item>Farmacia</item>
    </string-array>

    <string-array name="incident_types_array">
        <item>Infracción de transito</item>
        <item>Cierre vial por obras en la zona</item>
        <item>Cierre vial por evento en la zona</item>
        <item>Zona prohibida</item>
        <item>Trafico excesivo por sobre flujo</item>
        <item>Trafico excesivo por accidente</item>
        <item>Accidente en la zona</item>
        <item>Cansancio por manejar</item>
        <item>Malestar de salud</item>
        <item>Sin combustible</item>
        <item>Robo</item>
        <item>Falla mecánica</item>
        <item>Ponchadura de llanta</item>
        <item>Problema eléctrico</item>
        <item>Exceso de peso</item>
        <item>Clima adverso</item>
        <item>Mal estado de las carreteras</item>
        <item>Retraso en la carga</item>
        <item>Retraso en la descarga</item>
    </string-array>

    <!-- ESTAS SON STRINGS PARA DESCARGA, CONSULTA E INSTALACION DE MAPA DE MEXICO OFFLINE/ONLINE -->

    <string name="descargar">Descargar</string>
    <string name="consultar">Consultar</string>
    <string name="toca_el_boton_de_consultar">Toca el botón de Consultar para obtener la información del mapa de México.</string>
    <string name="titulo_descarga_del_mapa_de_mexico">Descarga del Mapa de México</string>
    <string name="cancelar_descarga">Cancelar\ndescarga</string>
    <string name="MapDownloader_instance_no_esta_listo">MapDownloader instance no esta listo trata de nuevo.</string>
    <string name="Ocurrio_un_error_al_tratar_de_encontrar_el_mapa">Ocurrio un error al tratar de encontrar el mapa de México: </string>
    <string name="mexico">México</string>
    <string name="la_instancia_de_madownloader_no_esta_lista">La instancia de MapDownloader no está lista. Inténtalo de nuevo.</string>
    <string name="error_no_se_encontro_la_region_mexico">Error: No se encontro la región México.</string>
    <string name="el_mapa_de_mexico_ya_esta_descargado">El mapa de México ya esta descargado e instalado.</string>
    <string name="error_al_completar_la_descarga_de_mexico">Error al completar la descarga de México: </string>
    <string name="descarga_completada">Descarga completada al 100% para el mapa de México\nListo, el mapa ya fue descargado y puede ser utilizado de manera offline.</string>
    <string name="la_descarga_fue_pausada">La descarga fue pausada por el usuario</string>
    <string name="error_pausa_descarga">Error en la pausa de descarga de regiones. La tarea intentó con demasiada frecuencia volver a intentar la descarga: </string>
    <string name="reanudado_descarga">Se ha reanudado una descarga previamente pausada.</string>
    <string name="proceso_cancelado">Cancelado: </string>
    <string name="tareas_canceladas"> tareas de descarga canceladas.</string>
    <string name="descargando_mapa">Descargando mapa de México.</string>
    <string name="progreso">Progreso: </string>
    <string name="simbolo_porcentaje">%.</string>
    <string name="nombre_mapa">Nombre del mapa: </string>
    <string name="id_mapa">ID: </string>
    <string name="tamano_descarga">Tamaño de descarga: </string>
    <string name="simbolo_mb"> MB</string>
    <string name="mapa_descargado_exitosamente">El mapa de México ha sido descargado correctamente. Ahora puedes utilizarlo incluso sin una conexión estable a internet.</string>
    <string name="mapa_no_descargado">El mapa de México aún no ha sido descargado. Ve a la sección de \"Descargar Mapa\" y comienza el proceso de descarga.</string>
    <string name="mapa_actualizacon_recomendacion">Te recomendamos buscar actualizaciones para tu mapa descargado. ¿Deseas hacerlo ahora?</string>
    <string name="buscar_actualizaciones">Buscar actualizaciones</string>
    <string name="iniciar_actualizacion">Iniciar Actualización</string>

    <!-- AQUI TERMINAN LOS STRINGS PARA DESCARGA DE MAPA DE MEXICO -->

    <!-- ESTAS SON STRINGS PARA INICIO/CIERRE DE SESION -->
    <string name="seguro_cerrar_sesion">¿Estás seguro de que deseas cerrar sesión?</string>
    <string name="cerrar_sesión">Cerrar Sesión</string>
    <string name="error_vacio_username">El usuario no puede estar vacío</string>
    <string name="error_vacio_password">La contraseña no puede estar vacía</string>
    <string name="error_credenciale_acceptar">Aceptar</string>
    <string name="inicio_sesión">Inicio de Sesión</string>
    <string name="iniciar_sesión">Iniciar de Sesión</string>
    <string name="usuario">Usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="menu_perfil">Perfil</string>
    <string name="forgot_password">Restablecer contraseña</string>

    <!-- AQUI TERMINAN LOS STRINGS PARA INICIO/CIERRE DE SESION -->
    <string name="error_encontrado">LA APLICACIÓN CUENTA CON UNA IMPRESIÓN DE ADVERTENCIAS COMO PARTE DEL PROCESO DE PRUEBAS, DESPUES DE ESTA FASE SERÁN ELIMINADOS LAS IMPRESIONES: </string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
        Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab
        illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut
        odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor
        sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad
        minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea
        voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur</string>
    <string name="text_enviar">ENVIAR</string>
    <string name="text__salir_y_continuar">SALIR Y CONTINUAR</string>
    <string name="close_sesion">Cerrar sesion activa</string>
    <string name="error_internet">No se ha podido enviar verifique su conexion a internet</string>
    <string name="menu_incidencia">Incidencias</string>
    <string name="hint_control_incidencia">Incidencias</string>
</resources>