<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_dialog_background_white"
    android:orientation="vertical"
    android:padding="20dp">

    <!-- Título del AlertDialog -->
    <TextView
        android:id="@+id/txtDescargaTitulo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/titulo_descarga_del_mapa_de_mexico"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/txtDescargaInfo"
        app:layout_constraintHorizontal_bias="0.5"/>

    <!-- Descripción del AlertDialog -->
    <TextView
        android:id="@+id/txtDescargaInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/toca_el_boton_de_consultar"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/txtDescargaTitulo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/txtProcesoDescarga"
        app:layout_constraintVertical_bias="0.3"/>

    <TextView
        android:id="@+id/txtProcesoDescarga"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text=""
        android:paddingBottom="20dp"
        android:visibility="gone"
        android:paddingTop="20dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/txtDescargaInfo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnConsultarDescarga"
        app:layout_constraintVertical_bias="0.3"/>

    <!-- Botón Cancelar -->
    <Button
        android:id="@+id/btnConsultarDescarga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/consultar"
        android:backgroundTint="@color/blue"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/txtProcesoDescarga"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnDescargarMapa"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5" />

    <!-- Botón Aceptar -->
    <Button
        android:id="@+id/btnDescargarMapa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descargar"
        android:enabled="false"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/txtProcesoDescarga"
        app:layout_constraintStart_toEndOf="@id/btnConsultarDescarga"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>