<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/loginLayout"
    android:background="#000000"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@+id/tvTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="100dp"/>
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inicio_sesión"
        android:textSize="26sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/imgLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/etUsername"
        android:layout_marginTop="32dp"/>
    <EditText
        android:id="@+id/etUsername"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:hint="@string/usuario"
        android:inputType="text"
        android:paddingLeft="10dp"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/edittext_background"
        android:textColor="@color/teal_700"
        android:textColorHint="@color/teal_700"/>
    <FrameLayout
        android:id="@+id/frameLayoutPW"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/etUsername"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingLeft="10dp"
            android:hint="@string/contrasena"
            android:inputType="textPassword"
            android:paddingEnd="40dp"
            android:textColor="@color/teal_700"
            android:background="@drawable/edittext_background"
            android:textColorHint="@color/teal_700"/>
        <ImageView
            android:id="@+id/ivTogglePassword"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="end|center_vertical"
            android:padding="8dp"
            android:src="@drawable/visibility_off" /> <!-- Ícono inicial ocultar -->
    </FrameLayout>
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/iniciar_sesión"
        android:background="@color/deepOrange_800"
        app:layout_constraintTop_toBottomOf="@id/frameLayoutPW"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>